--- a/app/src/main/res/layout/card_foraging.xml
+++ b/app/src/main/res/layout/card_foraging.xml
@@ -20,6 +20,8 @@
             android:layout_height="64dp"
             android:layout_marginTop="4dp"
             android:layout_marginEnd="16dp"
+            android:layout_marginBottom="4dp"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
@@ -37,7 +39,7 @@
             app:layout_constraintHorizontal_bias="0.048"
             app:layout_constraintStart_toEndOf="@+id/imageIcon"
             app:layout_constraintTop_toTopOf="parent"
-            tools:text="A Title" />
+            tools:text="Scientific Plant Name" />
 
         <TextView
             android:id="@+id/foragingPlantScientificName"
@@ -49,7 +51,22 @@
             app:layout_constraintHorizontal_bias="0.052"
             app:layout_constraintStart_toEndOf="@+id/imageIcon"
             app:layout_constraintTop_toBottomOf="@id/foragingPlantNameTitle"
-            tools:text="A Description" />
+            tools:text="Scientific Name" />
+
+        <TextView
+            android:id="@+id/datePlantPicked"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="4dp"
+            android:layout_marginBottom="4dp"
+            android:textAlignment="viewStart"
+            android:text="Date Plant Picked"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.052"
+            app:layout_constraintStart_toEndOf="@+id/imageIcon"
+            app:layout_constraintTop_toBottomOf="@+id/foragingPlantScientificName"
+            app:layout_constraintVertical_bias="0.0" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.cardview.widget.CardView>
