--- a/app/src/main/res/layout/fragment_foraging.xml
+++ b/app/src/main/res/layout/fragment_foraging.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragments.ForagingFragment">
+    tools:context=".ui.foraging.ForagingFragment">
 
     <TextView
         android:id="@+id/foragingTitle"
