--- a/app/src/main/res/layout/fragment_foraging.xml
+++ b/app/src/main/res/layout/fragment_foraging.xml
@@ -5,7 +5,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.foraging.ForagingFragment">
+    tools:context=".ui.foraging.ForagingFragment"
+    android:id="@+id/foragingFragmentView"
+    >
 
     <TextView
         android:id="@+id/foragingTitle"
@@ -18,7 +20,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:text="@string/foragingTitle"
+        android:text="Welcome User"
         android:textAppearance="?android:attr/textAppearanceLarge"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -104,7 +106,5 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.948" />
-
-
-
 </androidx.constraintlayout.widget.ConstraintLayout>
+
