--- a/app/src/main/res/layout/fragment_plant_detail.xml
+++ b/app/src/main/res/layout/fragment_plant_detail.xml
@@ -1,7 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
+<layout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+
+    <data>
+        <variable
+            name="foragingvm"
+            type="ie.wit.foraging.ui.detail.PlantDetailViewModel" />
+    </data>
+<androidx.constraintlayout.widget.ConstraintLayout
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/frameLayout"
     android:layout_width="match_parent"
@@ -14,11 +21,11 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="40dp"
         android:layout_marginEnd="8dp"
-        android:text="@string/message"
+        android:text="@string/datePlantPicked"
         android:textAlignment="textEnd"
         android:textColor="@color/black"
         android:textAppearance="?android:attr/textAppearanceMedium"
-        app:layout_constraintEnd_toStartOf="@+id/editMessage"
+        app:layout_constraintEnd_toStartOf="@+id/editDatePlantPicked"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView3" />
@@ -39,33 +46,31 @@
         app:layout_constraintTop_toBottomOf="@+id/textView4" />
 
     <EditText
-        android:id="@+id/editMessage"
-        android:layout_width="210dp"
+        android:id="@+id/editDatePlantPicked"
+        android:layout_width="189dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:layout_marginEnd="4dp"
         android:textAlignment="viewStart"
+        android:text="@={foragingvm.observablePlant.datePlantPicked}"
         android:textAppearance="?android:attr/textAppearanceMedium"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editScientificName" />
 
-    <TextView
+    <EditText
         android:id="@+id/editScientificName"
-        android:layout_width="212dp"
+        android:layout_width="189dp"
         android:layout_height="50dp"
         android:layout_marginTop="20dp"
         android:layout_marginEnd="4dp"
-        android:gravity="center"
-        android:text="test"
-        android:textAlignment="viewStart"
-        android:textColor="@color/color_primary"
+        android:text="@={foragingvm.observablePlant.scientificPlantName}"
         android:textAppearance="?android:attr/textAppearanceMedium"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editCommonName" />
 
     <EditText
         android:id="@+id/editUpvotes"
-        android:layout_width="210dp"
+        android:layout_width="189dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:layout_marginEnd="4dp"
@@ -73,16 +78,17 @@
         android:inputType="number"
         android:textAppearance="?android:attr/textAppearanceMedium"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editMessage" />
+        app:layout_constraintTop_toBottomOf="@+id/editDatePlantPicked" />
 
     <EditText
         android:id="@+id/editCommonName"
-        android:layout_width="210dp"
+        android:layout_width="189dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="60dp"
         android:layout_marginEnd="8dp"
         android:ems="10"
-        android:inputType="number"
+        android:text="@={foragingvm.observablePlant.commonPlantName}"
+        android:inputType="text"
         android:textAlignment="viewStart"
         android:textAppearance="?android:attr/textAppearanceMedium"
         app:layout_constraintEnd_toEndOf="parent"
@@ -122,7 +128,7 @@
         android:id="@+id/editPlantButton"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="Edit"
+        android:text="@string/update"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/deletePlantButton"
         app:layout_constraintHorizontal_chainStyle="packed"
@@ -132,9 +138,10 @@
         android:id="@+id/deletePlantButton"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="Delete"
+        android:text="@string/delete"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/editPlantButton" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
+</layout>
