Added date picker and storage

--- a/app/src/main/res/layout/fragment_foraging.xml
+++ b/app/src/main/res/layout/fragment_foraging.xml
@@ -79,6 +79,7 @@
         android:id="@+id/date_plant_picked"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:focusableInTouchMode="false"
         android:layout_marginStart="32dp"
         android:layout_marginTop="32dp"
         android:layout_marginEnd="32dp"
