--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -65,4 +65,8 @@
         <item name="colorControlActivated">@color/white</item>
         <item name="colorControlHighlight">@color/black</item>
     </style>
+
+    <style name="DialogTheme" parent="@style/ThemeOverlay.MaterialComponents.MaterialCalendar">
+        <item name="colorAccent">@color/color_primary</item>
+    </style>
 </resources>
