--- a/app/src/main/res/layout/fragment_foraging.xml
+++ b/app/src/main/res/layout/fragment_foraging.xml
@@ -92,20 +92,55 @@
 
     <Button
         android:id="@+id/foragingButton"
-        android:layout_width="wrap_content"
+        android:layout_width="60dp"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:text="@string/foragingButton"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="32dp"
+        app:icon="@drawable/ic_add_white"
+        app:layout_constraintStart_toEndOf="@+id/chooseImage"
+        app:layout_constraintTop_toBottomOf="@+id/date_plant_picked" />
+
+    <Button
+        android:id="@+id/chooseImage"
+        android:layout_width="60dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="32dp"
+        app:icon="@drawable/ic_choose_image"
+        app:layout_constraintStart_toStartOf="@+id/date_plant_picked"
+        app:layout_constraintTop_toBottomOf="@+id/date_plant_picked"
+        app:srcCompat="@drawable/ic_choose_image" />
+
+    <Button
+        android:id="@+id/button2"
+        android:layout_width="60dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="32dp"
+        app:icon="@drawable/ic_camera"
+        app:layout_constraintStart_toEndOf="@+id/foragingButton"
+        app:layout_constraintTop_toBottomOf="@+id/date_plant_picked" />
+
+    <Button
+        android:id="@+id/add_map"
+        android:layout_width="60dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="32dp"
+        app:icon="@drawable/ic_map"
+        app:layout_constraintStart_toEndOf="@+id/button2"
+        app:layout_constraintTop_toBottomOf="@+id/date_plant_picked" />
+
+    <ImageView
+        android:id="@+id/foragingImage"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:layout_gravity="center"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.028"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.948" />
+        app:layout_constraintTop_toBottomOf="@+id/button2"
+        app:srcCompat="@mipmap/ic_launcher" />
 </androidx.constraintlayout.widget.ConstraintLayout>
 
