--- a/app/src/main/res/layout/fragment_foraging.xml
+++ b/app/src/main/res/layout/fragment_foraging.xml
@@ -123,7 +123,7 @@
         app:layout_constraintTop_toBottomOf="@+id/date_plant_picked" />
 
     <Button
-        android:id="@+id/add_map"
+        android:id="@+id/foragingLocation"
         android:layout_width="60dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
