--- a/app/src/main/res/layout/fragment_plant_detail.xml
+++ b/app/src/main/res/layout/fragment_plant_detail.xml
@@ -63,6 +63,7 @@
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/editDatePlantPicked"
+            android:focusableInTouchMode="false"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Date Plant Picked"
