--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -6,12 +6,15 @@
         <item name="colorPrimaryVariant">@color/color_primary</item>
         <item name="colorOnPrimary">@color/white</item>
         <!-- Secondary brand color. -->
-        <item name="colorSecondary">@color/color_forth</item>
-        <item name="colorSecondaryVariant">@color/color_forth</item>
+        <item name="colorSecondary">@color/color_primary</item>
+        <item name="colorSecondaryVariant">@color/white</item>
         <item name="colorOnSecondary">@color/color_secondary</item>
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
+        <item name="android:textColorSecondary">@color/color_primary</item>
+<!--        <item name="android:actionMenuTextColor">@android:color/white</item>-->
+
     </style>
 
 
